Tool now graphically displays the road that's being created